fix icon button is not centered

--- a/src/components/dls/ButtonNew/ButtonNew.module.scss
+++ b/src/components/dls/ButtonNew/ButtonNew.module.scss
@@ -149,6 +149,9 @@
   display: flex;
   margin-right: calc(0.5 * var(--spacing-medium));
 }
+.content {
+  display: flex;
+}
 
 // svg sizes
 .large > span > svg {
